--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "crypto-js": "^4.2.0",
     "mongoose": "^8.4.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
