--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,22 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "cookie-parser": "^1.4.6",
     "crypto-js": "^4.2.0",
-    "mongoose": "^8.4.0",
+    "mongoose": "^8.5.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.5",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,6 +48,7 @@
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
