--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.22",
+    "expo-av": "^14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -37,6 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^1.6.1",
     "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10"
   },
@@ -44,6 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
