--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "51.0.26",
     "expo-av": "^14.0.6",
     "expo-constants": "~16.0.2",
