auth backend in working (signin ending)

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,15 +3,15 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "components/FontLoader"  ]
+    "expo-env.d.ts",
+    "components/FontLoader",
+    "declarations.d.ts"
+  ]
 }
