--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -64,7 +65,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.16.6",
     "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
