--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "geojson": "^0.5.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.1",
     "jsonwebtoken": "^9.0.2",
