--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@expo/vector-icons": "^14.0.2",
     "@motify/components": "^0.18.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -24,16 +25,17 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "51.0.26",
-    "expo-av": "^14.0.6",
+    "expo": "~51.0.38",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.21",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^15.8.0",
     "moti": "^0.29.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -56,7 +58,7 @@
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
