--- a/server/package.json
+++ b/server/package.json
@@ -20,69 +20,70 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/apollo": "^12.2.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.2.0",
+    "@nestjs/apollo": "^12.2.1",
+    "@nestjs/common": "^10.4.6",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.6",
+    "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/platform-socket.io": "^10.3.10",
+    "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/platform-socket.io": "^10.4.6",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.3.10",
+    "@nestjs/websockets": "^10.4.6",
     "apollo-server-express": "^3.13.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "geojson": "^0.5.0",
     "graphql": "^16.9.0",
-    "graphql-tools": "^9.0.1",
+    "graphql-tools": "^9.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.5.0",
+    "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.12.0",
-    "reflect-metadata": "^0.2.0",
+    "pg": "^8.13.1",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.3.10",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.2.2",
+    "@nestjs/testing": "^10.4.6",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.12",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.16.6",
-    "@types/nodemailer": "^6.4.15",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/node": "^22.8.1",
+    "@types/nodemailer": "^6.4.16",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "bcrypt": "^5.1.1",
-    "eslint": "^8.42.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.2.3",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
