graphql server setup for products

--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "geojson": "^0.5.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.3",
@@ -65,6 +66,7 @@
     "@nestjs/testing": "^10.4.6",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/graphql-upload": "^16.0.7",
     "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.8.1",
