--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^10.4.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.6",
+    "@types/multer": "^1.4.12",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
