--- a/client/package.json
+++ b/client/package.json
@@ -18,38 +18,43 @@
     "@apollo/client": "^3.11.8",
     "@expo/vector-icons": "^14.0.2",
     "@motify/components": "^0.18.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/bottom-tabs": "7",
+    "@react-navigation/drawer": "^7.0.11",
+    "@react-navigation/material-top-tabs": "^7.0.11",
+    "@react-navigation/native": "7",
+    "@react-navigation/native-stack": "^7.1.7",
+    "@react-navigation/stack": "^7.0.11",
+    "@types/react": "~18.3.12",
     "axios": "^1.7.7",
-    "expo": "~51.0.38",
-    "expo-av": "~14.0.7",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "~52.0.11",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-video": "~2.0.2",
+    "expo-web-browser": "~14.0.1",
     "graphql": "^15.8.0",
+    "jest-expo": "~52.0.2",
     "moti": "^0.29.0",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-css-transformer": "^2.0.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.5.1",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^1.6.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -61,8 +66,9 @@
     "jest-expo": "~51.0.4",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
