--- a/client/package.json
+++ b/client/package.json
@@ -20,37 +20,37 @@
     "@motify/components": "^0.18.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "7",
-    "@react-navigation/drawer": "^7.0.11",
+    "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/material-top-tabs": "^7.0.11",
     "@react-navigation/native": "7",
-    "@react-navigation/native-stack": "^7.1.7",
+    "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.11",
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
-    "expo": "~52.0.11",
-    "expo-av": "~15.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-splash-screen": "~0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-video": "~2.0.2",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~52.0.36",
+    "expo-av": "~15.0.2",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-video": "~2.0.5",
+    "expo-web-browser": "~14.0.2",
     "graphql": "^15.8.0",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.5",
     "moti": "^0.29.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.7",
     "react-native-css-transformer": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "^6.5.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^1.6.1",
     "react-native-svg": "^15.8.0",
     "react-native-tab-view": "^3.5.2",
