trying to fix the project structure

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "components/FontLoader",
+    "components/fontLoader",
 
     "declarations.d.ts",
     "nativewind-env.d.ts"
